# tree-sitter-bni

./: .eslintrc.json  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  binding.gyp  generate.sh  grammar.js  package.json  tree-sitter.json
bindings/c/: tree-sitter-bni.pc.in
bindings/c/tree_sitter/: tree-sitter-bni.h
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
preview/: PROMPT.md
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: main.txt
